# fourcasters_api_rust

./: Cargo.toml
src/: db.rs  main.rs
src/models/: mod.rs  token.rs  user.rs
