[package]
name = "fourcasters_rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_codegen = "0.5.0-rc.1"
serde = "1.0"
serde_json = "1.0"
mongodb = "2.0"
lazy_static = "1.4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }

